Implement the save and cancel actions
Validate the entries, set errorMessage if is not valid

--- a/app/templates/friends/-form.hbs
+++ b/app/templates/friends/-form.hbs
@@ -1,4 +1,5 @@
 <form {{action "save" on="submit"}}>
+  <h2>{{errorMessage}}</h2>
   <p>
     <label>First Name:
       {{input value=model.firstName}}
