--- a/app/templates/friends/show.hbs
+++ b/app/templates/friends/show.hbs
@@ -1,1 +1,6 @@
-{{outlet}}
+<ul>
+  <li>First Name: {{model.firstName}}</li>
+  <li>Last Name: {{model.lastName}}</li>
+  <li>Email: {{model.email}}</li>
+  <li>twitter: {{model.twitter}}</li>
+</ul>
