Link to friend view from listing view

--- a/app/templates/friends/index.hbs
+++ b/app/templates/friends/index.hbs
@@ -2,6 +2,10 @@
 
 <ul>
   {{#each friend in model}}
-    <li>{{friend.firstName}} {{friend.lastName}}</li>
+    <li>
+      {{#link-to 'friends.show' friend}}
+        {{friend.firstName}} {{friend.lastName}}
+      {{/link-to}}
+    </li>
   {{/each}}
 </ul>
