add a computed property fullName to friend model

--- a/app/templates/friends/index.hbs
+++ b/app/templates/friends/index.hbs
@@ -4,7 +4,7 @@
   {{#each friend in model}}
     <li>
       {{#link-to 'friends.show' friend}}
-        {{friend.firstName}} {{friend.lastName}}
+        {{friend.fullName}}
       {{/link-to}}
     </li>
   {{/each}}
