Handle deletion of friends from show and index pages

--- a/app/templates/friends/show.hbs
+++ b/app/templates/friends/show.hbs
@@ -4,6 +4,7 @@
   <li>Email: {{model.email}}</li>
   <li>twitter: {{model.twitter}}</li>
   <li>{{link-to "Edit info" "friends.edit" model}}</li>
+  <li><a href="#" {{action "delete" model}}>Delete Friend</a></li>
 </ul>
 
 {{#link-to 'friends.index'}}Back{{/link-to}}
