--- a/app/templates/friends/index.hbs
+++ b/app/templates/friends/index.hbs
@@ -1,11 +1,20 @@
 <h1>Listing Friends</h1>
 
-<ul>
-  {{#each friend in model}}
-    <li>
-      {{#link-to 'friends.show' friend}}
-        {{friend.fullName}}
-      {{/link-to}}
-    </li>
-  {{/each}}
-</ul>
+<h2>Friends: {{model.length}}</h2>
+
+<table>
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    {{#each friend in model}}
+      <tr>
+        <td>{{link-to friend.fullName "friends.show" friend}}</td>
+        <td><a href="#" {{action "delete" friend}}>Delete</a></td>
+      </tr>
+    {{/each}}
+  </tbody>
+</table>
