--- a/app/templates/friends/index.hbs
+++ b/app/templates/friends/index.hbs
@@ -1,11 +1,8 @@
-<h1>Listing Friends</h1>
-
-<h2>Friends: {{model.length}}</h2>
-
-<table>
+<table class='primary'>
   <thead>
     <tr>
       <th>Name</th>
+      <th>Articles</th>
       <th></th>
     </tr>
   </thead>
@@ -13,6 +10,7 @@
     {{#each friend in model}}
       <tr>
         <td>{{link-to friend.fullName "friends.show" friend}}</td>
+        <td>{{friend.totalArticles}}</td>
         <td><a href="#" {{action "delete" friend}}>Delete</a></td>
       </tr>
     {{/each}}
