--- a/app/templates/friends/show.hbs
+++ b/app/templates/friends/show.hbs
@@ -1,11 +1,16 @@
-<div class="friend-profile">
-  <p>{{model.firstName}}</p>
-  <p>{{model.lastName}}</p>
-  <p>{{model.email}}</p>
-  <p>{{model.twitter}}</p>
-  <p>{{link-to "Lend Article" "articles.new"}}</p>
-  <p>{{link-to "Edit info" "friends.edit" model}}</p>
-  <p><a href="#" {{action "delete" model}}>delete</a></p>
+<div class="friend-profile" class="row">
+  <div class="friend-info full">
+    {{fill-murray width=150 height=150}}
+    <div>
+      <p>{{model.firstName}}</p>
+      <p>{{model.lastName}}</p>
+      <p>{{model.email}}</p>
+      <p>{{model.twitter}}</p>
+      <p>{{link-to "Lend Article" "articles.new"}}</p>
+      <p>{{link-to "Edit info" "friends.edit" model}}</p>
+      <p><a href="#" {{action "delete" model}}>delete</a></p>
+    </div>
+  </div>
 </div>
 
 <div class="articles-container">
